<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Accueil</string>
    <string name="title_liste">Liste</string>
    <string name="title_dashboard">carte</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_connexion">Connexion</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="identifiant">Identifiant</string>
    <string name="compte">Compte</string>
    <string name="connexion">Connexion</string>
    <string name="creer_un_compte">Creer un compte</string>
    <string name="liste_des_attractions">Liste des attractions</string>
    <string name="ma_liste">Ma liste</string>
    <string name="presentation">Presentation</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="info">Plus d\'information</string>
    <string name="description">Attrac\'Speed est une application qui va améliorer votre aventure dans les parcs d\'attractions. Celle ci vous permettra de gagner du temps en planifiant votre journée en fonction de l\'affluence des visiteurs et ainsi eviter les trop longues files d\'attentes.</string>
    <string name="titleparc">Choisir un parc</string>
    <string name="utilisateur">Utilisateur</string>
    <string name="listeattract">Liste des attractions</string>
    <string name="attraction">attraction</string>
    <string name="maliste">ma liste</string>

    <string name="selected_item">Selected item:</string>

        <string-array name="planets_array">
            <item>Disneyland Paris</item>
            <item>Waligator Grand-Est</item>
            <item>Parque du petit prince</item>
        </string-array>
</resources>