<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:id="@+id/linear_layout"
    android:background="@drawable/background2"
    android:orientation="vertical">

    <TextView
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bienvenue"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:layout_marginTop="130dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/presentation"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_marginTop="120dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleparc"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

    <!--<Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:minHeight="48dp"
        android:textColor="@color/white"
        />-->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/custombutton"
        android:text="@string/info"
        android:textColor="@color/white"
        android:textSize="15sp" />


</LinearLayout>

