<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.connexion.ConnexionFragment"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connexion"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:layout_margin="90dp"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/utilisateur"
        android:layout_below="@+id/view2"
        android:background="#30ffffff"
        android:hint="@string/utilisateur"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:textSize="20dp"
        android:drawableLeft="@drawable/ic_baseline_person_24"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mdp"
        android:layout_below="@+id/utilisateur"
        android:background="#30ffffff"
        android:hint="@string/mot_de_passe"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:textSize="20dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_play_for_work_24"/>

    <Button
        android:id="@+id/connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mdp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#aaaaff"
        android:text="@string/connexion"
        android:width="150dp"
        android:textSize="12sp"
        android:background="@drawable/custombutton2"/>

    <Button
        android:id="@+id/creation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connexion"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:text="@string/creer_un_compte"
        android:textColor="@color/white"
        android:textSize="12sp" />


</RelativeLayout>